feat(net): replace OkHttp and nv-websocket with Netty and Reactor Netty HTTP